--- a/src/css/feedback.css
+++ b/src/css/feedback.css
@@ -15,7 +15,7 @@
   padding-top: 5px;
   padding-left: 0.9rem;
   display: block;
-  background: var(--color-primary-green);
+  background: var(--rebrand-color-primary-green);
   /* border-radius: 50%; */
   /* border-radius: 8px; */
   font-family: inherit;
@@ -122,7 +122,7 @@
 }
 
 #feedback-paas:hover {
-  background-color: var(--color-primary-green);
+  background-color: var(--rebrand-color-primary-green);
   box-shadow: 3px 5px 7px -3px darkslategrey;
   border: transparent;
   transform: rotate(-90deg) translateY(-0.2rem);
@@ -165,7 +165,7 @@
 }
 
 #feedback-cloud:hover {
-  background-color: var(--color-primary-green);
+  background-color: var(--rebrand-color-primary-green);
   box-shadow: 3px 5px 7px -3px darkslategrey;
   border: transparent;
   transform: rotate(-90deg) translateY(-0.2rem);
@@ -208,7 +208,7 @@
 }
 
 #feedback-incubate:hover {
-  background-color: var(--color-primary-green);
+  background-color: var(--rebrand-color-primary-green);
   box-shadow: 3px 5px 7px -3px darkslategrey;
   border: transparent;
   transform: rotate(-90deg) translateY(-0.2rem);
@@ -256,7 +256,7 @@
 }
 
 #feedback-headless:hover {
-  background-color: var(--color-primary-green);
+  background-color: var(--rebrand-color-primary-green);
   box-shadow: 3px 5px 7px -3px darkslategrey;
   border: transparent;
   transform: rotate(-90deg) translateY(-0.2rem);
