--- a/src/css/land.css
+++ b/src/css/land.css
@@ -26,7 +26,7 @@
 .land h4,
 .land h5,
 .land h6 {
-  color: var(--color-primary-green);
+  color: var(--rebrand-color-primary-green);
   font-weight: var(--heading-font-weight);
   hyphens: none;
   line-height: 1.3;
@@ -57,7 +57,7 @@
 }
 
 .land h2:not(.discrete) {
-  border-bottom: 1px solid var(--color-primary-green);
+  border-bottom: 1px solid var(--rebrand-color-primary-green);
   margin-left: -1rem;
   margin-right: -1rem;
   padding: 0.4rem 1rem 0.1rem;
@@ -601,7 +601,8 @@
   background: var(--kbd-background);
   border: 1px solid var(--kbd-border-color);
   border-radius: 0.25em;
-  box-shadow: 0 1px 0 var(--kbd-border-color), 0 0 0 0.1em var(--body-background) inset;
+  box-shadow: 0 1px 0 var(--kbd-border-color),
+    0 0 0 0.1em var(--body-background) inset;
   padding: 0.25em 0.5em;
   vertical-align: text-bottom;
   white-space: nowrap;
@@ -757,7 +758,7 @@
 }
 
 .feedback-banner button.migrate {
-  background: var(--color-primary-green);
+  background: var(--rebrand-color-primary-green);
   border-radius: 25px;
   color: white;
   padding: 0.75rem 1.5rem 0.625rem;
@@ -767,7 +768,7 @@
 
 .feedback-banner button.migrate:hover,
 .feedback-banner button.migrate:focus {
-  background-color: var(--color-primary-dark-green);
+  background-color: var(--rebrand-color-primary-teal);
 }
 
 .feedback-banner button.migrate,
@@ -909,7 +910,7 @@ h2.welcome-header {
 .land .card .dark-pill {
   color: whitesmoke;
   border: none;
-  background-color: var(--color-primary-dark-green);
+  background-color: var(--rebrand-color-primary-teal);
   padding: 5px 10px;
   text-align: center;
   text-decoration: none;
@@ -920,7 +921,7 @@ h2.welcome-header {
 }
 
 .land .card .light-pill {
-  color: var(--color-primary-dark-green);
+  color: var(--rebrand-color-primary-teal);
   border: none;
   background-color: var(--color-primary-blue);
   padding: 5px 10px;
@@ -1136,7 +1137,7 @@ body {
   }
 }
 
-.land a[rel*=noopener]::after {
+.land a[rel*="noopener"]::after {
   content: "\f08e";
   font-family: FontAwesome, sans-serif;
   font-weight: 400;
