--- a/src/css/main.css
+++ b/src/css/main.css
@@ -41,7 +41,9 @@
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: scroll; /* Enable scroll if needed */
-  background-color: var(--color-primary-dark-green); /* Fallback color */
+  background-color: var(
+    --rebrand-color-primary-dark-green
+  ); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
@@ -93,7 +95,7 @@
 }
 
 .modal-content h1 {
-  color: var(--color-primary-green);
+  color: var(--rebrand-color-primary-green);
   font-family: "Roboto", sans-serif;
   font-weight: bold;
   font-size: 2rem;
@@ -109,7 +111,7 @@
 }
 
 .modal-content h3 {
-  color: var(--color-primary-green);
+  color: var(--rebrand-color-primary-green);
   font-family: "Roboto", sans-serif;
   font-weight: normal;
   font-size: 1rem;
@@ -117,7 +119,7 @@
 
 /* The Close Button */
 .close {
-  color: var(--color-primary-green);
+  color: var(--rebrand-color-primary-green);
   float: right;
   font-size: 28px;
   font-weight: bold;
@@ -126,7 +128,7 @@
 
 .close:hover,
 .close:focus {
-  color: var(--color-primary-dark-green);
+  color: var(--rebrand-color-primary-teal);
   text-decoration: none;
   cursor: pointer;
 }
@@ -141,7 +143,7 @@
 .modal-content div.column a.review-button-customer button {
   border-radius: 25px;
   padding: 0.75rem 1.5rem 0.625rem;
-  background-color: var(--color-primary-green);
+  background-color: var(--rebrand-color-primary-green);
   color: white;
   text-decoration: none;
   border: none;
