--- a/src/css/main.css
+++ b/src/css/main.css
@@ -41,9 +41,7 @@
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: scroll; /* Enable scroll if needed */
-  background-color: var(
-    --rebrand-color-primary-dark-green
-  ); /* Fallback color */
+  background-color: var(--rebrand-color-primary-dark-green); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
