--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -28,7 +28,6 @@
   --rebrand-color-primary-bloom: #f0d3e9;
   --rebrand-color-bloom-dark: #bd5ba6;
   --rebrand-color-primary-red: #c02d2d;
-  --rebrand-color-sand: ;
   --color-orange: #f48a16;
   --color-red: #f76733;
   --color-trials: #080a37;
@@ -167,9 +166,7 @@
   --nav-height: calc(var(--body-min-height) - var(--toolbar-height));
   --nav-height--desktop: var(--body-min-height);
   --nav-panel-height: calc(var(--nav-height) - var(--drawer-height));
-  --nav-panel-height--desktop: calc(
-    var(--nav-height--desktop) - var(--drawer-height)
-  );
+  --nav-panel-height--desktop: calc(var(--nav-height--desktop) - var(--drawer-height));
   --nav-width: calc(325 / var(--rem-base) * 1rem);
   --toc-top: calc(var(--body-top) + var(--toolbar-height));
   --toc-height: calc(100vh - var(--toc-top) - 2.5rem);
