--- a/src/css/feedback.css
+++ b/src/css/feedback.css
@@ -105,7 +105,7 @@
   padding-top: 5px;
   padding-left: 0.9rem;
   display: block;
-  background: var(--color-primary-ocean-blue);
+  background: var(--color-digital-blue);
   /* border-radius: 50%; */
   /* border-radius: 8px; */
   font-family: inherit;
@@ -122,7 +122,6 @@
 }
 
 #feedback-paas:hover {
-  background-color: var(--rebrand-color-primary-green);
   box-shadow: 3px 5px 7px -3px darkslategrey;
   border: transparent;
   transform: rotate(-90deg) translateY(-0.2rem);
@@ -176,7 +175,7 @@
 
 #feedback-incubate {
   height: 3.35rem;
-  width: 6rem;
+  width: 5.9rem;
   position: fixed;
   top: 50%;
   right: -0.56rem;
@@ -191,12 +190,12 @@
   padding-top: 5px;
   padding-left: 0.9rem;
   display: block;
-  background: lightgrey;
+  background: var(--rebrand-color-primary-teal);
   /* border-radius: 50%; */
   /* border-radius: 8px; */
   font-family: inherit;
   font-size: 1rem;
-  color: black;
+  color: whitesmoke;
   /* border: 1px solid whitesmoke; */
   transition: all 0.275s ease-in-out;
 }
@@ -204,7 +203,7 @@
 #feedback-incubate a {
   text-decoration: none;
   font-weight: 300;
-  color: black;
+  color: whitesmoke;
 }
 
 #feedback-incubate:hover {
