--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -23,6 +23,7 @@
   --rebrand-color-primary-lime: #7ecb13;
   --rebrand-color-primary-teal: #02373f;
   --rebrand-color-primary-sand: #f0eee7;
+  --rebrand-color-primary-fresh: #d3f0a5;
   --rebrand-color-primary-light-blue: #549afc;
   --rebrand-color-primary-dark-grey: #1e1f1c;
   --rebrand-color-primary-bloom: #f0d3e9;
@@ -73,7 +74,7 @@
   --navbar-background: white;
   --navbar-font-color: var(--rebrand-color-primary-teal);
   --navbar_hover-background: var(--color-smoke-90);
-  --navbar-button-background: var(--color-digital-blue);
+  --navbar-button-background: var(--rebrand-color-primary-green);
   --navbar-button-border-color: var(--panel-border-color);
   --navbar-button-font-color: var(--body-font-color);
   --navbar-menu-border-color: var(--panel-border-color);
