--- a/src/css/land.css
+++ b/src/css/land.css
@@ -833,6 +833,10 @@ h2.welcome-header {
   box-shadow: 4px 11px 23px #c5c5c5;
 }
 
+.sect2.card {
+  background: linear-gradient(to top, var(--rebrand-color-primary-sand), var(--rebrand-color-primary-green)) !important;
+}
+
 .sect2.card::before {
   content: "";
   position: absolute;
@@ -862,37 +866,21 @@ h2.welcome-header {
   background-image: url("../img/author.svg");
 }
 
-.sect2.card:nth-of-type(1) {
-  background: var(--rebrand-color-primary-green);
-}
-
-.sect2.card:nth-of-type(1):hover {
+/* .sect2.card:nth-of-type(1) {
   background: linear-gradient(to top, var(--rebrand-color-primary-sand), var(--rebrand-color-primary-green)) !important;
 }
 
 .sect2.card:nth-of-type(2) {
-  background: var(--rebrand-color-primary-green);
-}
-
-.sect2.card:nth-of-type(2):hover {
   background: linear-gradient(to top, var(--rebrand-color-primary-sand), var(--rebrand-color-primary-green)) !important;
 }
 
 .sect2.card:nth-of-type(3) {
-  background: var(--rebrand-color-primary-green);
-}
-
-.sect2.card:nth-of-type(3):hover {
   background: linear-gradient(to top, var(--rebrand-color-primary-sand), var(--rebrand-color-primary-green)) !important;
 }
 
 .sect2.card:nth-of-type(4) {
-  background: var(--rebrand-color-primary-green);
-}
-
-.sect2.card:nth-of-type(4):hover {
   background: linear-gradient(to top, var(--rebrand-color-primary-sand), var(--rebrand-color-primary-green)) !important;
-}
+} */
 
 .land .card .paragraph {
   font-weight: var(--weight-light);
