ui dropdown updates

--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -70,9 +70,9 @@
     <div id="topbar-nav" class="navbar-menu">
       {{!-- {{> search}} --}}
       <div class="navbar-end">
-        <a href="{{{siteRootPath}}}/headless/index.html" class="navbar-item headless">Headless docs</a>
-        <a href="{{{siteRootPath}}}/product-docs/Getting-started-with-Magnolia.html" class="navbar-item headless">DX Core</a>
-        <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item headless">PaaS</a>
+        <a href="{{{siteRootPath}}}/headless/" class="navbar-item headless">Headless docs</a>
+        <a href="{{{siteRootPath}}}/product-docs/6.3/" class="navbar-item headless">DX Core</a>
+        <a href="{{{siteRootPath}}}/paas/" class="navbar-item headless">PaaS</a>
         <div class="navbar-item navbar-item--button">
           <span class="control">
             <a class="button is-primary" href="https://www.magnolia-trials.com" target="_blank">Magnolia Trials</a>
@@ -116,8 +116,8 @@
 
       <div class="navbar-end">
         <a href="https://ha.magnolia-cms.com/" class="navbar-item headless" target="_blank">Headless Accelerator <i class="fa fa-external-link" aria-hidden="true" style="padding-left: 3px;"></i></a>
-        <a href="{{{siteRootPath}}}/product-docs/Getting-started-with-Magnolia.html" class="navbar-item headless">DX Core</a>
-        <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item headless">PaaS</a>
+        <a href="{{{siteRootPath}}}/product-docs/6.3/" class="navbar-item headless">DX Core</a>
+        <a href="{{{siteRootPath}}}/paas/" class="navbar-item headless">PaaS</a>
         <div class="navbar-item navbar-item--button">
           <span class="control">
             <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
@@ -296,23 +296,7 @@
     <div id="topbar-nav" class="navbar-menu">
 
       <div class="navbar-end">
-        <a href="{{{siteRootPath}}}/product-docs/Releases.html" class="navbar-item">Releases</a>
-        <div class="navbar-item has-dropdown is-hoverable">
-          <span class="navbar-link">DX Core
-            <span class="icon-wrapper"><i class="arrow down"></i></span>
-          </span>
-          <div class="navbar-dropdown">
-            <a href="{{{siteRootPath}}}/product-docs/Getting-started-with-Magnolia.html" class="navbar-item">Get Started</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing.html" class="navbar-item">Developing</a>
-            <a href="{{{siteRootPath}}}/product-docs/Modules.html" class="navbar-item">Modules</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing/API.html" class="navbar-item">API</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing/Templating.html" class="navbar-item">Templating</a>
-            <a href="{{{siteRootPath}}}/product-docs/Apps.html" class="navbar-item">Apps</a>
-            <a href="{{{siteRootPath}}}/product-docs/Connector-Packs.html" class="navbar-item">Connector Packs</a>
-            <a href="{{{siteRootPath}}}/magnolia-cli/4.x/index.html" class="navbar-item">CLI</a>
-            <a href="{{{siteRootPath}}}/product-docs/Special-Features.html" class="navbar-item">Special Features</a>
-          </div>
-        </div>
+        <a href="{{{siteRootPath}}}/product-docs/6.3/" class="navbar-item">DX Core</a>
         {{!-- <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a> --}}
         <div class="navbar-item navbar-item--button">
           <span class="control">
@@ -356,24 +340,21 @@
     <div id="topbar-nav" class="navbar-menu">
 
       <div class="navbar-end">
-        <a href="{{{siteRootPath}}}/product-docs/Releases.html" class="navbar-item">Releases</a>
+        <a href="{{{siteRootPath}}}/product-docs/6.3/releases/" class="navbar-item">Releases</a>
         <div class="navbar-item has-dropdown is-hoverable">
           <span class="navbar-link">DX Core
             <span class="icon-wrapper"><i class="arrow down"></i></span>
           </span>
           <div class="navbar-dropdown">
-            <a href="{{{siteRootPath}}}/product-docs/Getting-started-with-Magnolia.html" class="navbar-item">Get Started</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing.html" class="navbar-item">Developing</a>
-            <a href="{{{siteRootPath}}}/product-docs/Modules.html" class="navbar-item">Modules</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing/API.html" class="navbar-item">API</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing/Templating.html" class="navbar-item">Templating</a>
-            <a href="{{{siteRootPath}}}/product-docs/Apps.html" class="navbar-item">Apps</a>
-            <a href="{{{siteRootPath}}}/product-docs/Connector-Packs.html" class="navbar-item">Connector Packs</a>
-            <a href="{{{siteRootPath}}}/magnolia-cli/4.x/index.html" class="navbar-item">CLI</a>
-            <a href="{{{siteRootPath}}}/product-docs/Special-Features.html" class="navbar-item">Special Features</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.3/getting-started-with-magnolia/" class="navbar-item">Get Started</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.3/developing/" class="navbar-item">Developers</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.3/modules/" class="navbar-item">Modules</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.3/developing/api/" class="navbar-item">APIs</a>
+            <a href="{{{siteRootPath}}}/magnolia-cli/4.x/" class="navbar-item">CLI</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.3/authoring/" class="navbar-item">Authors</a>
           </div>
         </div>
-        <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a>
+        <a href="{{{siteRootPath}}}/paas/" class="navbar-item">PaaS</a>
         <div class="navbar-item navbar-item--button">
           <span class="control">
             <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
@@ -417,21 +398,18 @@
     <div id="topbar-nav" class="navbar-menu">
 
       <div class="navbar-end">
-        <a href="{{{siteRootPath}}}/product-docs/Releases.html" class="navbar-item">Releases</a>
+        <a href="{{{siteRootPath}}}/product-docs/6.3/releases/" class="navbar-item">Releases</a>
         <div class="navbar-item has-dropdown is-hoverable">
           <span class="navbar-link">DX Core
             <span class="icon-wrapper"><i class="arrow down"></i></span>
           </span>
           <div class="navbar-dropdown">
-            <a href="{{{siteRootPath}}}/product-docs/Getting-started-with-Magnolia.html" class="navbar-item">Get Started</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing.html" class="navbar-item">Developing</a>
-            <a href="{{{siteRootPath}}}/product-docs/Modules.html" class="navbar-item">Modules</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing/API.html" class="navbar-item">API</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing/Templating.html" class="navbar-item">Templating</a>
-            <a href="{{{siteRootPath}}}/product-docs/Apps.html" class="navbar-item">Apps</a>
-            <a href="{{{siteRootPath}}}/product-docs/Connector-Packs.html" class="navbar-item">Connector Packs</a>
-            <a href="{{{siteRootPath}}}/magnolia-cli/4.x/index.html" class="navbar-item">CLI</a>
-            <a href="{{{siteRootPath}}}/product-docs/Special-Features.html" class="navbar-item">Special Features</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.3/getting-started-with-magnolia/" class="navbar-item">Get Started</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.3/developing/" class="navbar-item">Developers</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.3/modules/" class="navbar-item">Modules</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.3/developing/api/" class="navbar-item">APIs</a>
+            <a href="{{{siteRootPath}}}/magnolia-cli/4.x/" class="navbar-item">CLI</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.3/authoring/" class="navbar-item">Authors</a>
           </div>
         </div>
         <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a>
@@ -478,21 +456,18 @@
     <div id="topbar-nav" class="navbar-menu">
 
       <div class="navbar-end">
-        <a href="{{{siteRootPath}}}/product-docs/Releases.html" class="navbar-item">Releases</a>
+        <a href="{{{siteRootPath}}}/product-docs/6.3/releases/" class="navbar-item">Releases</a>
         <div class="navbar-item has-dropdown is-hoverable">
           <span class="navbar-link">DX Core
             <span class="icon-wrapper"><i class="arrow down"></i></span>
           </span>
           <div class="navbar-dropdown">
-            <a href="{{{siteRootPath}}}/product-docs/Getting-started-with-Magnolia.html" class="navbar-item">Get Started</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing.html" class="navbar-item">Developing</a>
-            <a href="{{{siteRootPath}}}/product-docs/Modules.html" class="navbar-item">Modules</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing/API.html" class="navbar-item">API</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing/Templating.html" class="navbar-item">Templating</a>
-            <a href="{{{siteRootPath}}}/product-docs/Apps.html" class="navbar-item">Apps</a>
-            <a href="{{{siteRootPath}}}/product-docs/Connector-Packs.html" class="navbar-item">Connector Packs</a>
-            <a href="{{{siteRootPath}}}/magnolia-cli/4.x/index.html" class="navbar-item">CLI</a>
-            <a href="{{{siteRootPath}}}/product-docs/Special-Features.html" class="navbar-item">Special Features</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.3/getting-started-with-magnolia/" class="navbar-item">Get Started</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.3/developing/" class="navbar-item">Developers</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.3/modules/" class="navbar-item">Modules</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.3/developing/api/" class="navbar-item">APIs</a>
+            <a href="{{{siteRootPath}}}/magnolia-cli/4.x/" class="navbar-item">CLI</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.3/authoring/" class="navbar-item">Authors</a>
           </div>
         </div>
         <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a>
@@ -539,21 +514,18 @@
     <div id="topbar-nav" class="navbar-menu">
 
       <div class="navbar-end">
-        <a href="{{{siteRootPath}}}/product-docs/Releases.html" class="navbar-item">Releases</a>
+        <a href="{{{siteRootPath}}}/product-docs/6.3/releases/" class="navbar-item">Releases</a>
         <div class="navbar-item has-dropdown is-hoverable">
           <span class="navbar-link">DX Core
             <span class="icon-wrapper"><i class="arrow down"></i></span>
           </span>
           <div class="navbar-dropdown">
-            <a href="{{{siteRootPath}}}/product-docs/Getting-started-with-Magnolia.html" class="navbar-item">Get Started</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing.html" class="navbar-item">Developing</a>
-            <a href="{{{siteRootPath}}}/product-docs/Modules.html" class="navbar-item">Modules</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing/API.html" class="navbar-item">API</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing/Templating.html" class="navbar-item">Templating</a>
-            <a href="{{{siteRootPath}}}/product-docs/Apps.html" class="navbar-item">Apps</a>
-            <a href="{{{siteRootPath}}}/product-docs/Connector-Packs.html" class="navbar-item">Connector Packs</a>
-            <a href="{{{siteRootPath}}}/magnolia-cli/4.x/index.html" class="navbar-item">CLI</a>
-            <a href="{{{siteRootPath}}}/product-docs/Special-Features.html" class="navbar-item">Special Features</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.3/getting-started-with-magnolia/" class="navbar-item">Get Started</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.3/developing/" class="navbar-item">Developers</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.3/modules/" class="navbar-item">Modules</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.3/developing/api/" class="navbar-item">APIs</a>
+            <a href="{{{siteRootPath}}}/magnolia-cli/4.x/" class="navbar-item">CLI</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.3/authoring/" class="navbar-item">Authors</a>
           </div>
         </div>
         <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a>
